recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(levels:Int, length:Double) {
	if (levels == 0){
		for ( i<- 1 to 3){
			avance(length)
			droite(120)
		}
	}
	else {
		sierpinski(levels-1, length/2)
		avance(length/2)
		sierpinski(levels-1, length∕2)
	}
}
